--- a/src/main/resources/templates/meal_times.html
+++ b/src/main/resources/templates/meal_times.html
@@ -3,7 +3,7 @@
 	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="ISO-8859-1">
-<title>Product Manager</title>
+<title>Meal Time</title>
 </head>
 <body>
 <div align="center">	
@@ -19,7 +19,15 @@
 	
 	<h1>Meal Time Manager</h1>
 	<div sec:authorize="hasAnyAuthority('CREATOR', 'ADMIN')">
-		<a href="new">Create New Time</a>
+		<a th:href="@{/meal/time/new}">Create New Time</a>
+	</div>
+
+	<div th:if = "${success}">
+		<p th:text="${success}"></p>
+	</div>
+
+	<div th:if = "${error}">
+		<p th:text="${error}"></p>
 	</div>
 	
 	<br/><br/>
