--- a/src/main/resources/templates/meal_times.html
+++ b/src/main/resources/templates/meal_times.html
@@ -12,7 +12,7 @@
 
 		<i><span sec:authentication="principal.authorities">Roles</span></i>
 	</div>
-	
+
 	<form th:action="@{/logout}" method="post">
 		<input type="submit" value="Logout" />
 	</form>
@@ -49,9 +49,9 @@
 				<td th:text="${mealtime.endTime}">End Time</td>
 				
 				<td sec:authorize="hasAnyAuthority('ADMIN', 'EDITOR')">
-					<a th:href="@{'/meal/time/' + ${mealtime.identifier}}">Edit</a>
+					<a th:href="@{'/meal/time/edit/' + ${mealtime.identifier}}">Edit</a>
 					&nbsp;&nbsp;&nbsp;&nbsp;
-<!--					<a sec:authorize="hasAuthority('ADMIN')" th:href="@{'/delete/' + ${product.id}}">Delete</a>-->
+					<a sec:authorize="hasAuthority('ADMIN')" th:href="@{'/meal/time/delete/' + ${mealtime.identifier}}">Delete</a>
 				</td>
 			</tr>
 		</tbody>
