--- a/src/main/resources/templates/edit_meal_time.html
+++ b/src/main/resources/templates/edit_meal_time.html
@@ -19,7 +19,7 @@
 		<form action="#" th:action="@{/meal/time/edit/update}" th:object="${serveTime}" method="post">
 			<table border="0" cellpadding="10">
 				<tr>
-					<td>Product ID:</td>
+					<td>Meal Time ID:</td>
 					<td><input type="text" th:field="*{id}" readonly="readonly" /></td>
 				</tr>			
 				<tr>
