--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
 		<input type="submit" value="Logout" />
 	</form>
 	
-	<h1>Product Manager</h1>
+	<h1>Product Manager - <span th:text="${listProducts.size()}"></span></h1>
 	<div sec:authorize="hasAnyAuthority('CREATOR', 'ADMIN')">
 		<a href="new">Create New Product</a>
 	</div>
