meal CRUD complete

--- a/src/main/resources/templates/meals.html
+++ b/src/main/resources/templates/meals.html
@@ -56,8 +56,7 @@
 
 				<td sec:authorize="hasAnyAuthority('ADMIN', 'EDITOR')">
 					<a th:href="@{'/meal/edit/' + ${meal.id}}">Edit</a>
-
-<!--					<a sec:authorize="hasAuthority('ADMIN')" th:href="@{'/meal/delete/' + ${meal.id}}">Delete</a>-->
+					<a sec:authorize="hasAuthority('ADMIN')" th:href="@{'/meal/delete/' + ${meal.id}}">Delete</a>
 				</td>
 			</tr>
 		</tbody>
