--- a/src/main/resources/templates/edit_meal_date.html
+++ b/src/main/resources/templates/edit_meal_date.html
@@ -12,7 +12,7 @@
 		<div th:if = "${error}">
 			<p th:text="${error}"></p>
 		</div>
-		<form method="post" th:object="${mealDate}">
+		<form th:action="@{/meal/date/edit/update}" method="post" th:object="${mealDate}">
 			<table border="0" cellpadding="10">
 				<tr>
 					<td>Meal Date ID:</td>
@@ -30,7 +30,7 @@
 				</tr>
 				<tr>
 					<td>Meal Date:</td>
-					<td><input type="date" th:field="*{mealDate}" required /></td>
+					<td><input type="date" name="str_mealDate" th:value="${#dates.format(mealDate.mealDate, 'yyyy-MM-dd')}" required /></td>
 				</tr>
 				<tr>
 					<td colspan="2"><button type="submit">Update</button></td>
