meal date delete

--- a/src/main/resources/templates/meal_date.html
+++ b/src/main/resources/templates/meal_date.html
@@ -47,7 +47,7 @@
 				<td th:text="${meal.meal.name}">Meal Name</td>
 				<td sec:authorize="hasAnyAuthority('ADMIN', 'EDITOR')">
 					<a th:href="@{'/meal/date/edit/' + ${meal.id}}">Edit</a>
-<!--					<a sec:authorize="hasAuthority('ADMIN')" th:href="@{'/meal/delete/' + ${meal.id}}">Delete</a>-->
+					<a sec:authorize="hasAuthority('ADMIN')" th:href="@{'/meal/date/delete/' + ${meal.id}}">Delete</a>
 				</td>
 			</tr>
 		</tbody>
