--- a/src/main/resources/templates/member_meal.html
+++ b/src/main/resources/templates/member_meal.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="ISO-8859-1">
 <title>Meals</title>
@@ -31,6 +31,33 @@
 	</div>
 	
 	<br/><br/>
+	<form action="#" method="post" th:object="${newMemberMeal}">
+		<table border="0" cellpadding="10">
+				<tr>
+					<td><input type="number" name="quantity" th:field="*{quantity}"></td>
+					<td>
+						<select placeholder="Select Meal" required name="meal" id="meal" th:field="*{meal}" >
+							<option th:each="mealDateEach : ${mealDateService}"
+									th:value="${mealDateEach.id}"
+									th:text="${mealDateEach.meal.name} + ' - ' + ${#dates.format(mealDateEach.mealDate, 'dd-MM-yyyy')}"></option>
+						</select>
+					</td>
+					<td>
+						<select placeholder="Select User" required name="user" id="user" th:field="*{user}" >
+							<option th:each="userEach : ${listUser}"
+									th:value="${userEach.id}"
+									th:text="${userEach.username}"></option>
+						</select>
+					</td>
+					<td><button type="submit">Add New Member</button></td>
+				</tr>
+		</table>
+	</form>
+
+	<br>
+	<br>
+	<br>
+
 	<table border="1" cellpadding="10">
 		<thead>
 			<tr>
