--- a/src/main/resources/templates/masses.html
+++ b/src/main/resources/templates/masses.html
@@ -18,8 +18,8 @@
 	</form>
 	
 	<h1>Mass - <span th:text="${massList.size()}"></span></h1>
-	<div sec:authorize="hasAnyAuthority('CREATOR', 'ADMIN')">
-		<a th:href="@{/meal/new}">Create New Mass</a>
+	<div sec:authorize="hasAnyAuthority('MANAGER', 'CREATOR', 'ADMIN')">
+		<a th:href="@{/mass/new}">Create New Mass</a>
 	</div>
 
 	<div th:if = "${success}">
@@ -58,6 +58,7 @@
 
 				<td sec:authorize="hasAnyAuthority('ADMIN', 'EDITOR')">
 					<a th:href="@{'/mass/edit/' + ${mass.id}}">Edit</a>
+					<a sec:authorize="hasAuthority('ADMIN')" th:text="${mass.isApproved() ? 'Deactivate' : 'Activate'}" th:href="@{'/mass/status/' + ${mass.id}}"></a>
 					<a sec:authorize="hasAuthority('ADMIN')" th:href="@{'/mass/delete/' + ${mass.id}}">Delete</a>
 				</td>
 			</tr>
