mass edit page data show

--- a/src/main/resources/templates/edit_meal.html
+++ b/src/main/resources/templates/edit_meal.html
@@ -16,7 +16,7 @@
 			<table border="0" cellpadding="10">
 				<tr>
 					<td>Meal Id:</td>
-					<td><input type="text" th:field="*{id}" required /></td>
+					<td><input type="text" th:field="*{id}" readonly required /></td>
 				</tr>
 				<tr>
 					<td>Meal Name:</td>
