--- a/src/main/resources/templates/mass_members.html
+++ b/src/main/resources/templates/mass_members.html
@@ -20,7 +20,7 @@
 	<h1>Mass "<span th:text="${session.mass.name}"></span>" - <span th:text="${massMemberList.size()}"></span></h1>
 	<p>Manager: <span th:text="${session.mass.user.username}"></span></p>
 	<div sec:authorize="hasAnyAuthority('MANAGER', 'CREATOR', 'ADMIN')">
-<!--		<a th:href="@{{url}/mass/member/new (url = ${massMemberList})}">Create New Member</a>-->
+		<a th:href="@{/mass/{url}/member/new (url = ${session.mass.url})}">Create New Member</a>
 	</div>
 
 	<div th:if = "${success}">
@@ -40,6 +40,7 @@
 				<th>Mass Email</th>
 				<th>Mass Url</th>
 				<th>User Name</th>
+				<th>Member Status</th>
 				<th sec:authorize="hasAnyAuthority('ADMIN', 'EDITOR')">Actions</th>
 			</tr>
 		</thead>
@@ -49,13 +50,15 @@
 				<td th:text="${member.mass.name}">Mass Name</td>
 				<td th:text="${member.mass.email}">Mass Address</td>
 				<td th:text="${member.mass.url}">Mass Email</td>
+				<td th:text="${member.user.username}">Mass Email</td>
+				<td th:text="${member.isEnabled()} ? 'YES' : 'NO'">Mass Member Status</td>
 
-<!--				<td sec:authorize="hasAnyAuthority('ADMIN', 'EDITOR')">-->
+				<td sec:authorize="hasAnyAuthority('ADMIN', 'EDITOR', 'MANAGER')">
 <!--					<a th:href="@{'/mass/edit/' + ${mass.id}}">Edit</a>-->
 <!--					<a th:href="@{{url}/mass/member/ (url = ${mass.url})}">Mass Members</a>-->
 <!--					<a sec:authorize="hasAuthority('ADMIN')" th:text="${mass.isApproved() ? 'Deactivate' : 'Activate'}" th:href="@{'/mass/status/' + ${mass.id}}"></a>-->
-<!--					<a sec:authorize="hasAuthority('ADMIN')" th:href="@{'/mass/delete/' + ${mass.id}}">Delete</a>-->
-<!--				</td>-->
+					<a sec:authentication="hasAnyAuthority('ADMIN', 'MANAGER')" th:href="@{/mass/{url}/member/delete/ (url = ${member.mass.url})}">Delete</a>
+				</td>
 			</tr>
 		</tbody>
 	</table>
