custom sign up page

--- a/src/main/resources/templates/sign_in.html
+++ b/src/main/resources/templates/sign_in.html
@@ -11,7 +11,7 @@
         <div class="position-relative z-index-5">
           <div class="row">
             <div class="col-xl-7 col-xxl-8">
-              <a href="index.html" class="text-nowrap logo-img d-block px-4 py-9 w-100">
+              <a th:href="@{/}" class="text-nowrap logo-img d-block px-4 py-9 w-100">
                 <img th:src="@{images/logo/dark-logo.svg}" width="180" alt="MASSMS">
               </a>
               <div class="d-none d-xl-flex align-items-center justify-content-center" style="height: calc(100vh - 80px);">
