login and register issues solved

--- a/src/main/resources/templates/edit_user.html
+++ b/src/main/resources/templates/edit_user.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div sec:authorize="hasAnyAuthority('EDITOR', 'ADMIN')" align="center" >
+<div align="center" >
 	<h1>Edit User</h1>
 	<br/>
 	<div th:if = "${error}">
