--- a/src/main/resources/templates/edit_mass_2.html
+++ b/src/main/resources/templates/edit_mass_2.html
@@ -21,7 +21,7 @@
                 <div class="card-body px-4 py-3">
                     <div class="row align-items-center">
                         <div class="col-9">
-                            <h4 class="fw-semibold mb-8">All Mass - <span th:text="${massList.size()}"></span></h4>
+                            <h4 class="fw-semibold mb-8">Edit Mass Mass - <span th:text="${massList.size()}"></span></h4>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a class="text-muted " th:href="@{/}">Dashboard</a></li>
